Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Jenkins Project</title>
 </head>
 <body>
-    <h1>Hello, Jenkins!</h1>
+    <h1>Hello, edit first Jenkins!</h1>
     <p>This is a test page from my GitHub repository.</p>
 </body>
 </html>
