--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Jenkins Project</title>
+    <title>My Jen Project</title>
 </head>
 <body>
     <h1>Hello, edit first Jenkins!</h1>
